; ModuleID = '/home/carl/AnghaBench/linux/net/batman-adv/extr_netlink.c_batadv_netlink_set_mesh_ap_isolation.c'
source_filename = "/home/carl/AnghaBench/linux/net/batman-adv/extr_netlink.c_batadv_netlink_set_mesh_ap_isolation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nlattr = type { i32 }
%struct.batadv_priv = type { i32 }
%struct.batadv_softif_vlan = type { i32 }

@BATADV_NO_FLAGS = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nlattr*, %struct.batadv_priv*)* @batadv_netlink_set_mesh_ap_isolation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @batadv_netlink_set_mesh_ap_isolation(%struct.nlattr* %0, %struct.batadv_priv* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.nlattr*, align 8
  %5 = alloca %struct.batadv_priv*, align 8
  %6 = alloca %struct.batadv_softif_vlan*, align 8
  store %struct.nlattr* %0, %struct.nlattr** %4, align 8
  store %struct.batadv_priv* %1, %struct.batadv_priv** %5, align 8
  %7 = load %struct.batadv_priv*, %struct.batadv_priv** %5, align 8
  %8 = load i32, i32* @BATADV_NO_FLAGS, align 4
  %9 = call %struct.batadv_softif_vlan* @batadv_softif_vlan_get(%struct.batadv_priv* %7, i32 %8)
  store %struct.batadv_softif_vlan* %9, %struct.batadv_softif_vlan** %6, align 8
  %10 = load %struct.batadv_softif_vlan*, %struct.batadv_softif_vlan** %6, align 8
  %11 = icmp ne %struct.batadv_softif_vlan* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @ENOENT, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %27

15:                                               ; preds = %2
  %16 = load %struct.batadv_softif_vlan*, %struct.batadv_softif_vlan** %6, align 8
  %17 = getelementptr inbounds %struct.batadv_softif_vlan, %struct.batadv_softif_vlan* %16, i32 0, i32 0
  %18 = load %struct.nlattr*, %struct.nlattr** %4, align 8
  %19 = call i32 @nla_get_u8(%struct.nlattr* %18)
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  %24 = call i32 @atomic_set(i32* %17, i32 %23)
  %25 = load %struct.batadv_softif_vlan*, %struct.batadv_softif_vlan** %6, align 8
  %26 = call i32 @batadv_softif_vlan_put(%struct.batadv_softif_vlan* %25)
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %15, %12
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local %struct.batadv_softif_vlan* @batadv_softif_vlan_get(%struct.batadv_priv*, i32) #1

declare dso_local i32 @atomic_set(i32*, i32) #1

declare dso_local i32 @nla_get_u8(%struct.nlattr*) #1

declare dso_local i32 @batadv_softif_vlan_put(%struct.batadv_softif_vlan*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
